# Physical-Mechanics-Simulations

./: .gitignore  README.md  gui.py  main.py  main.spec  pyproject.toml  requirements.txt
gui/: base.py  main_window.py  no_simulations.py
simulations/: damped_oscillator.py  object_off_slope.py  particle_off_slope.py  scattering.py  simulation.py  two_springs.py
