[project]
name = "mechanicssimulations"
version = "0.0.1"
description = "A collection of mechanic simulations"
keywords = ["physics", "simulation", "mechanics"]
authors = [{ name = "Punit Turlapati", email = "punitsst@gmail.com" }]

readme = "README.md"
license = { file = "LICENCE" }

requires-python = ">=3.8"
dependencies = ["numpy", "scipy", "matplotlib", "PySide6"]

[project.urls]
"Homepage" = "https://github.com/TheBobTheBlob/Physical-Mechanics-Simulations"
"Bug Reports" = "https://github.com/TheBobTheBlob/Physical-Mechanics-Simulations/issues"
"Source" = "https://github.com/TheBobTheBlob/Physical-Mechanics-Simulations"
